--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_rules">RulesActivity</string>
     <string name="title_activity_list_data">ListDataActivity</string>
     <string name="title_activity_current_score">CurrentScoreActivity</string>
+    <string name="title_activity_round_summary">RoundSummaryActivity</string>
 </resources>
